<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name_release" translatable="false" tools:ignore="UnusedResources">Jellyfin</string>
    <string name="app_name_debug" translatable="false" tools:ignore="UnusedResources">Jellyfin Debug</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="loading">Loading…</string>
    <string name="btn_cancel">Cancel</string>
    <string name="byletter_letters">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="pref_playback">Playback</string>
    <string name="pref_max_bitrate_title">Max Streaming Bitrate</string>
    <string name="settings_title">Settings</string>
    <string name="pref_authentication_cat">Authentication</string>
    <string name="chapters">Chapters</string>
    <string name="pref_general">General</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_continue_watching">Continue Watching</string>
    <string name="lbl_next_up">Next Up</string>
    <string name="lbl_on_now">On Now</string>
    <string name="lbl_views">Views</string>
    <string name="lbl_by_letter">By Letter</string>
    <string name="lbl_suggested">Suggested</string>
    <string name="lbl_status">%1$s / %2$s</string>
    <string name="lbl_genres">Genres</string>
    <string name="lbl_performers">Performers</string>
    <string name="lbl_search">Search</string>
    <string name="msg_not_implemented">" not implemented"</string>
    <string name="lbl_latest">Latest</string>
    <string name="lbl_by_name">By Name</string>
    <string name="lbl_favorites">Favorites</string>
    <string name="lbl_coming_up">Coming Up</string>
    <string name="lbl_favorite_channels">Favorite Channels</string>
    <string name="lbl_other_channels">Other Channels</string>
    <string name="lbl_collections">Collections</string>
    <string name="lbl_movies">Movies</string>
    <string name="lbl_tv_series">TV Series</string>
    <string name="lbl_other">Other</string>
    <string name="lbl_latest_additions">Latest Additions</string>
    <string name="lbl_because_you_watched">"Because you watched "</string>
    <string name="lbl_play_all">Play All</string>
    <string name="lbl_shuffle_all">Shuffle All</string>
    <string name="lbl_play">Play</string>
    <string name="lbl_pause">Pause</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_cancel_recording">Cancel Recording</string>
    <string name="lbl_cancel_series">Cancel Series</string>
    <string name="lbl_record_series">Record Series</string>
    <string name="lbl_record">Record</string>
    <string name="msg_set_to_record">Program set to record</string>
    <string name="msg_unable_to_create_recording">Unable to create recording</string>
    <string name="msg_recording_cancelled">Recording Cancelled</string>
    <string name="msg_unable_to_cancel">Unable to cancel recording</string>
    <string name="lbl_cast_crew">Cast/Crew</string>
    <string name="lbl_chapters">Chapters</string>
    <string name="lbl_specials">Specials</string>
    <string name="lbl_trailers">Trailers</string>
    <string name="lbl_items">Items</string>
    <string name="lbl_item">Item</string>
    <string name="lbl_series">Series</string>
    <string name="lbl_seasons">Seasons</string>
    <string name="lbl_upcoming">Upcoming</string>
    <string name="lbl_favorite">Favorite</string>
    <string name="lbl_watched">Watched</string>
    <string name="lbl_sd">SD</string>
    <string name="lbl_runs">"Runs"</string>
    <string name="lbl_min">" min"</string>
    <string name="lbl_ends">"Ends"</string>
    <string name="lbl_directed_by">"Directed By"</string>
    <string name="lbl_last_played">"Last Played "</string>
    <string name="lbl_other_options">Other Options</string>
    <string name="lbl_people">People</string>
    <string name="lbl_videos">Videos</string>
    <string name="lbl_recordings">Recordings</string>
    <string name="lbl_none">None</string>
    <string name="msg_video_playback_error">"Video Playback error - "</string>
    <string name="lbl_bracket_unknown"><![CDATA[<Unknown>]]></string>
    <string name="msg_access_restricted">Access restricted at this time</string>
    <string name="lbl_trailer">"Trailer "</string>
    <string name="lbl_play_trailers">Play Trailer(s)</string>
    <string name="lbl_enter_user_name">Enter user name</string>
    <string name="lbl_enter_user_pw">Enter user password</string>
    <string name="lbl_no">No</string>
    <string name="lbl_yes">Yes</string>
    <string name="msg_error_server_unavailable">Server unavailable</string>
    <string name="lbl_version">"Version "</string>
    <string name="lbl_ip_hint">192.168.1.100:8096 or https://myserver.com</string>
    <string name="lbl_enter_server_address">Enter Server Address</string>
    <string name="lbl_valid_server_address">Please enter the server address (IP or domain/machine name)</string>
    <string name="lbl_ok">Ok</string>
    <string name="lbl_born">"Born "</string>
    <string name="lbl_loading_elipses">Loading…</string>
    <string name="msg_playback_not_allowed">Playback not allowed at this time</string>
    <string name="msg_playback_restricted">The administrator has restricted playback of this item at this time</string>
    <string name="msg_playback_incompatible">Cannot play this video format</string>
    <string name="lbl_never">Never</string>
    <string name="msg_cannot_play_time">Cannot play this item at this time</string>
    <string name="msg_cannot_play">This item cannot be played</string>
    <string name="lbl_no_items">No Items</string>
    <string name="lbl_empty">Empty</string>
    <string name="lbl_tv_queuing">Queue all Subsequent Episodes</string>
    <string name="sum_tv_queuing">Add the rest of the season to the queue when playing an episode</string>
    <string name="lbl_search_hint">Search text (select for keyboard)</string>
    <string name="lbl_play_first_unwatched">Play First Unwatched</string>
    <string name="lbl_mark_unplayed">Mark Unplayed</string>
    <string name="lbl_mark_played">Mark Played</string>
    <string name="lbl_remove_favorite">Remove Favorite</string>
    <string name="lbl_add_favorite">Add Favorite</string>
    <string name="lbl_now_playing_track">%1$s of %2$s</string>
    <string name="lbl_now_playing_album">from %1$s</string>
    <string name="lbl_like">Like</string>
    <string name="lbl_dislike">Dislike</string>
    <string name="lbl_unlike">Unlike</string>
    <string name="lbl_remove_dislike">Remove Dislike</string>
    <string name="msg_no_playable_items">No playable items</string>
    <string name="lbl_unwatched">Unwatched</string>
    <string name="lbl_load_channels">"Load Channels "</string>
    <string name="lbl_today">Today</string>
    <string name="lbl_tomorrow">Tomorrow</string>
    <string name="lbl_on">On </string>
    <string name="lbl_tune_to_channel">Tune to Channel</string>
    <string name="msg_recording_now">Recording Now</string>
    <string name="msg_will_record">Will Record</string>
    <string name="lbl_begin_padding">Begin Padding</string>
    <string name="lbl_program_ended">Program Ended</string>
    <string name="lbl_end_padding">End Padding</string>
    <string name="lbl_similar_items_library">Similar Items in your Library</string>
    <string name="lbl_record_any_channel">Record on any channel</string>
    <string name="lbl_record_any_time">Record at any time</string>
    <string name="lbl_only_new_episodes">Only New Episodes</string>
    <string name="lbl_repeat_options">Repeat Options</string>
    <string name="msg_cancel_entire_series">Are you sure you want to cancel this ENTIRE SERIES?</string>
    <string name="msg_remote_already_playing">Remote play request ignored.  Please stop current item first.</string>
    <string name="pref_audio_direct">Direct</string>
    <string name="pref_audio_compat">Downmix to Stereo</string>
    <string name="lbl_audio_output">Audio Output</string>
    <string name="lbl_goto_series">Go to Series</string>
    <string name="lbl_enable_debug">Debug Options</string>
    <string name="desc_debug">Provide extra information for debugging</string>
    <string name="lbl_showing">Showing</string>
    <string name="lbl_all_items">All Items</string>
    <string name="lbl_sorted_by">sorted by</string>
    <string name="lbl_from">from</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_date_added">Date Added</string>
    <string name="lbl_premier_date">Premier Date</string>
    <string name="lbl_critic_rating">Critic Rating</string>
    <string name="lbl_rating">Rating</string>
    <string name="lbl_starting_with">beginning with those whose name starts with</string>
    <string name="btn_done">Done</string>
    <string name="lbl_display_preferences">Display Preferences</string>
    <string name="lbl__continuing"> CONTINUING </string>
    <string name="lbl_ended"> ENDED </string>
    <string name="btn_filter">Filter</string>
    <string name="btn_clear_all">Clear All</string>
    <string name="lbl_filters">Filters</string>
    <string name="msg_subtitles_loading">Subtitles loading…</string>
    <string name="msg_unable_load_subs">Unable to load subtitle</string>
    <string name="msg_burn_sub_warning">Burned in subs can take a few minutes. Please be patient…</string>
    <string name="lbl_recording">Recording</string>
    <string name="lbl_no_recordings">No Recordings Available</string>
    <string name="lbl_live_tv_guide">Live TV Guide</string>
    <string name="lbl_recorded_tv">Recorded TV</string>
    <string name="pref_live_tv_cat">Live TV</string>
    <string name="msg_error_live_stream">Error streaming live TV. Will re-try…</string>
    <string name="lbl_direct_stream_live">Direct Stream Live TV</string>
    <string name="lbl_programs">Programs</string>
    <string name="lbl_albums">Albums</string>
    <string name="lbl_artists">Artists</string>
    <string name="lbl_song">Song</string>
    <string name="lbl_songs">Songs</string>
    <string name="lbl_album">Album</string>
    <string name="lbl_episodes">Episodes</string>
    <string name="lbl_enable_cinema_mode">Cinema Mode</string>
    <string name="sum_enable_cinema_mode">Show intros and previews before movie playback when enabled by the server</string>
    <string name="lbl_playlists">Playlists</string>
    <string name="lbl_warning">Warning</string>
    <string name="msg_items_added">" items added"</string>
    <string name="lbl_add_to_queue">Add to Queue</string>
    <string name="lbl_open_artist">Open Artist</string>
    <string name="lbl_open_album">Open Album</string>
    <string name="lbl_reshuffle_queue">Re-Shuffle Queue</string>
    <string name="lbl_next_item">Next Item</string>
    <string name="lbl_prev_item">Previous Item</string>
    <string name="lbl_up_next_colon">"Up Next: "</string>
    <string name="lbl_now_playing">Now Playing</string>
    <string name="lbl_play_from_here">Play from Here</string>
    <string name="lbl_remove_from_queue">Remove from Queue</string>
    <string name="lbl_goto_now_playing">Go to Now Playing</string>
    <string name="lbl_instant_mix">Instant Mix</string>
    <string name="lbl_save_as_playlist">Save as Playlist</string>
    <string name="lbl_delete">Delete</string>
    <string name="msg_item_added">" item added"</string>
    <string name="lbl_enable_seasonal_themes">Seasonal Themes</string>
    <string name="desc_seasonal_themes">Display special colors and suggestions at certain times of the year</string>
    <string name="desc_automatic_fav_songs">Automatic playlist of favorite and liked songs</string>
    <string name="lbl_new_premieres">New Premieres</string>
    <string name="lbl_bitstream_ac3">Bitstream Dolby Digital audio</string>
    <string name="desc_bitstream_ac3">Requires capable hardware</string>
    <string name="lbl_zoom">Zoom</string>
    <string name="lbl_auto_crop">Auto Crop</string>
    <string name="lbl_stretch">Stretch</string>
</resources>