<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/addFav"
        android:icon="@drawable/ic_heart"
        android:title="@string/lbl_add_favorite"
        android:visible="false" />
    <item
        android:id="@+id/remFav"
        android:enabled="false"
        android:icon="@drawable/ic_heart_red"
        android:title="@string/lbl_remove_favorite"
        android:visible="false" />
    <item
        android:id="@+id/addQueue"
        android:icon="@drawable/ic_add"
        android:title="@string/lbl_add_to_queue"
        android:visible="false" />
    <item
        android:id="@+id/gotoSeries"
        android:icon="@drawable/ic_tv"
        android:title="@string/lbl_goto_series"
        android:visible="false" />
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_trash"
        android:title="@string/lbl_delete"
        android:visible="false" />

</menu>
